# TCM_RAGFlow

./: .env  .gitignore  README.md  docker-compose.yml
TCMEmbeddingModel/: Dockerfile  pyproject.toml
TCMEmbeddingModel/scripts/: deploy.sh
docs/: GUIDE.md
ragflow/: .gitignore  Dockerfile  download_deps.py  pyproject.toml
ragflow/api/apps/: chunk_app.py
ragflow/api/apps/sdk/: doc.py  session.py
ragflow/api/db/services/: dialog_service.py
ragflow/api/utils/: commands.py
ragflow/docker/: docker-compose-base.yml  docker-compose-local.yml  docker-compose.yml  kibana_setup.sh  launch_backend_service.sh
ragflow/rag/app/: json.py
ragflow/rag/nlp/: __init__.py  search.py
ragflow/rag/svr/: task_executor.py
ragflow/sdk/python/ragflow_sdk/: ragflow.py
ragflow/sdk/python/ragflow_sdk/modules/: chat.py
ragflow/web/: package-lock.json  package.json
ragflow_eval/: .gitignore  Dockerfile  README.md  __init__.py  config.py  main.py  pyproject.toml  ragas_evaluation.py  ragas_metrics.py  run_evaluation.py  test_req.sh
ragflow_eval/config/: generation_example.yaml  retreival_example.yaml
ragflow_eval/config/tcm_qwen/: generation_qwen3_600m_ft_v3.yaml  retrieval_qwen3_ft_4b_v2.yaml
ragflow_eval/dataset/: cn_syndrome_knowledge_fixed.json  cn_syndrome_knowledge_one.json
